--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ authors = [
 readme = "README.md"
 requires-python = ">=3.7"
 dependencies = [
+    "telnetlib3",
     "hardware_device_base@git+https://github.com/COO-Utilities/hardware_device_base#egg=main"
 ]
 [tool.pytest.ini_options]
